[package]
name = "bomberman"
version = "0.1.0"
authors = []
edition = "2018"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
piston = "0.49.0"
piston2d-graphics = "0.35.0"
pistoncore-glutin_window = "0.63.0"
piston2d-opengl_graphics = "0.69.0"
piston2d-sprite = "0.58.0"
image = "0.22.3"
tiled = "0.7.4"
uuid = { version = "0.8.1", features = ["v4"] }
itertools = "0.8.2"
legion = "0.2.1"
rand = "0.7.2"