[package]
name = "bomberman"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
piston = "0.49.0"
piston2d-graphics = "0.35.0"
pistoncore-glutin_window = "0.63.0"
piston2d-opengl_graphics = "0.69.0"
piston2d-sprite = "0.58.0"
piston-ai_behavior = "0.31.0"
ron = "0.5.1"
serde = { version = "1.0.99", features = ["derive"] }
serde_json = "1.0.41"
image = "0.22.3"
rand = "0.7.2"